// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. renders without credits 1`] = `
<div>
  <div>
    <div>
      Some caption text goes in here
    </div>
  </div>
</div>
`;

exports[`2. renders with credits 1`] = `
<div>
  <div>
    <div>
      Some caption text goes in here
    </div>
    <div>
      JUST CREDITS
    </div>
  </div>
</div>
`;

exports[`3. renders with credits only 1`] = `
<div>
  <div>
    <div>
      JUST CREDITS
    </div>
  </div>
</div>
`;

exports[`4. renders a child 1`] = `
<div>
  <div>
    Hello world!
  </div>
  <div>
    <div>
      Some caption text goes in here
    </div>
    <div>
      JUST CREDITS
    </div>
  </div>
</div>
`;
